--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -49,21 +49,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PresentationModel\Course.cs" />
-    <Compile Include="ViewModel\Course.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="PresentationModel\HTMLParser.cs" />
+    <Compile Include="ViewModel\CourseProperty.cs" />
+    <Compile Include="PresentationModel\CoursePresentationModel.cs" />
+    <Compile Include="SelectCourseForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SelectCourseForm.Designer.cs">
+      <DependentUpon>SelectCourseForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="HTMLParser\htmlParser.cs" />
-    <Compile Include="Model.cs" />
+    <Compile Include="ViewModel\Course.cs" />
+    <Compile Include="Model\Model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="ViewModel\CourseDetail.cs" />
+    <Compile Include="ViewModel\CourseInfo.cs" />
+    <Compile Include="ViewModel\CourseTime.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -73,6 +74,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SelectCourseForm.resx">
+      <DependentUpon>SelectCourseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
