Revert "將 CoursePresentationModel 改名為 CourseSelectingFormPresentationModel"
This reverts commit d1332d17c48279a3c5deccb3d5c5b9caaab6bcc8.

--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -63,7 +63,7 @@
       <DependentUpon>StartUpForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\CourseProperty.cs" />
-    <Compile Include="PresentationModel\CourseSelectingFormPresentationModel.cs" />
+    <Compile Include="PresentationModel\CoursePresentationModel.cs" />
     <Compile Include="SelectCourseForm.cs">
       <SubType>Form</SubType>
     </Compile>
