取出HTML code之後，呼叫Parser跟Builder 來建立課程

--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builder\CourseBuilder.cs" />
+    <Compile Include="Builder\CourseAnalyzer.cs" />
     <Compile Include="MyForm\CourseSelectingResultForm.cs">
       <SubType>Form</SubType>
     </Compile>
