--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -81,9 +81,11 @@
       <DependentUpon>SelectCourseForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\Course.cs" />
-    <Compile Include="Model\Model.cs" />
+    <Compile Include="Model\CourseModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\Curriculum.cs" />
+    <Compile Include="ViewModel\Department.cs" />
     <EmbeddedResource Include="MyForm\CourseSelectingResultForm.resx">
       <DependentUpon>CourseSelectingResultForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,6 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MyController\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
