--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -78,8 +78,10 @@
     <Compile Include="MyForm\StartUpForm.Designer.cs">
       <DependentUpon>StartUpForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationModel\CourseManagementPresentationModel.cs" />
     <Compile Include="PresentationModel\CourseSelectResultPresentationModel.cs" />
     <Compile Include="PresentationModel\StartUpPresentationModel.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="ViewModel\CourseProperty.cs" />
     <Compile Include="PresentationModel\CourseSelectingPresentationModel.cs" />
     <Compile Include="MyForm\SelectCourseForm.cs">
