--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -94,7 +94,7 @@
       <DependentUpon>SelectCourseForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\Course.cs" />
-    <Compile Include="Model\CourseModel.cs" />
+    <Compile Include="Model\CourseSelectModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\Curriculum.cs" />
