--- a/homeworkUnitTest/homeworkUnitTest.csproj
+++ b/homeworkUnitTest/homeworkUnitTest.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="ManagerTest\DataItemManagerTest.cs" />
     <Compile Include="ManagerTest\StoreDataManagerTest.cs" />
+    <Compile Include="ModelTest\CourseManageModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,7 +59,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BuilderTest\" />
-    <Folder Include="ModelTest\" />
     <Folder Include="PresentationModelTest\" />
   </ItemGroup>
   <ItemGroup>
