完成 courseSelectModelTest  利用coverage 都至少97%以上

--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Model\CourseSelectModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\CourseSelectProperty.cs" />
     <Compile Include="ViewModel\Curriculum.cs" />
     <Compile Include="ViewModel\DataItem.cs" />
     <Compile Include="ViewModel\Department.cs" />
