完成 SelectResultPMTest， 以及補上 Notify Test

--- a/homeworkUnitTest/homeworkUnitTest.csproj
+++ b/homeworkUnitTest/homeworkUnitTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ModelTest\CourseSelectModelTest.cs" />
     <Compile Include="PresentationModelTest\CourseManagementPresentationModelTest.cs" />
     <Compile Include="PresentationModelTest\StartUpPresentationModelTest.cs" />
+    <Compile Include="PresentationModelTest\CourseSelectResultPresentationModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
