--- a/homeworkGUITest/homeworkGUITest.csproj
+++ b/homeworkGUITest/homeworkGUITest.csproj
@@ -74,7 +74,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainFormTest.cs" />
+    <Compile Include="SelectCourseFormTest.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
