--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -68,6 +68,9 @@
     <Compile Include="Builder\CourseBuilder.cs" />
     <Compile Include="Builder\CourseAnalyzer.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="MyForm\ManageCourseForm.Class.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MyForm\ImportCourseProgressForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +159,7 @@
       <DependentUpon>StartUpForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <Compile Include="PresentationModel\CourseManagementPresentationModel.ClassManagement.cs" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
